--- a/Draw/ZhaJinHua/Controller/ZJHGameController.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHGameController.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">12A269</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -188,7 +188,7 @@
 					<object class="IBUIView" id="735002969">
 						<reference key="NSNextResponder" ref="483638841"/>
 						<int key="NSvFlags">269</int>
-						<string key="NSFrame">{{109, 356}, {106, 53}}</string>
+						<string key="NSFrame">{{106.5, 352}, {111, 57}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
 						<reference key="NSNextKeyView" ref="107431730"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -405,6 +405,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{272, 421}, {45, 30}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -1524,22 +1525,22 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="zjh_auto_bet@2x.png">{16, 16}</string>
-			<string key="zjh_auto_bet_on@2x.png">{16, 16}</string>
-			<string key="zjh_bet@2x.png">{16, 16}</string>
-			<string key="zjh_button_holder_bg@2x.png">{16, 16}</string>
-			<string key="zjh_chat_button@2x.png">{16, 16}</string>
-			<string key="zjh_check_card@2x.png">{16, 16}</string>
-			<string key="zjh_compare_card@2x.png">{16, 16}</string>
-			<string key="zjh_fold_card@2x.png">{16, 16}</string>
-			<string key="zjh_game_bg@2x.jpg">{16, 16}</string>
-			<string key="zjh_game_setting@2x.png">{16, 16}</string>
-			<string key="zjh_game_total_bet_bg@2x.png">{16, 16}</string>
-			<string key="zjh_money_tree@2x.png">{16, 16}</string>
-			<string key="zjh_raise_bet@2x.png">{16, 16}</string>
-			<string key="zjh_runaway@2x.png">{16, 16}</string>
-			<string key="zjh_user_bet_bg@2x.png">{16, 16}</string>
-			<string key="zjh_vs.png">{16, 16}</string>
+			<string key="zjh_auto_bet@2x.png">{127, 60}</string>
+			<string key="zjh_auto_bet_on@2x.png">{127, 60}</string>
+			<string key="zjh_bet@2x.png">{103, 60}</string>
+			<string key="zjh_button_holder_bg@2x.png">{640, 110}</string>
+			<string key="zjh_chat_button@2x.png">{60, 51}</string>
+			<string key="zjh_check_card@2x.png">{82, 60}</string>
+			<string key="zjh_compare_card@2x.png">{92, 60}</string>
+			<string key="zjh_fold_card@2x.png">{90, 60}</string>
+			<string key="zjh_game_bg@2x.jpg">{640, 960}</string>
+			<string key="zjh_game_setting@2x.png">{72, 71}</string>
+			<string key="zjh_game_total_bet_bg@2x.png">{329, 43}</string>
+			<string key="zjh_money_tree@2x.png">{79, 81}</string>
+			<string key="zjh_raise_bet@2x.png">{98, 60}</string>
+			<string key="zjh_runaway@2x.png">{72, 72}</string>
+			<string key="zjh_user_bet_bg@2x.png">{100, 34}</string>
+			<string key="zjh_vs.png">{46, 37}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
