--- a/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
+++ b/Draw/ZhaJinHua/View/ZJHAvatarView~ipad.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
+<archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">12A269</string>
@@ -26,54 +26,58 @@
 		<array class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<object class="IBProxyObject" id="372490531">
 				<string key="IBProxiedObjectIdentifier">IBFilesOwner</string>
-				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 			<object class="IBProxyObject" id="975951072">
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
-				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
-			<object class="IBUIView" id="420009022">
+			<object class="IBUIView" id="247547560">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="317097103">
-						<reference key="NSNextResponder" ref="420009022"/>
+					<object class="IBUIImageView" id="834202396">
+						<reference key="NSNextResponder" ref="247547560"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{54, 74}</string>
-						<reference key="NSSuperview" ref="420009022"/>
-						<reference key="NSNextKeyView" ref="755362746"/>
+						<string key="NSFrameSize">{114, 148}</string>
+						<reference key="NSSuperview" ref="247547560"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="143634804"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">zjh_other_plyer_avatar@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIView" id="657775062">
-						<reference key="NSNextResponder" ref="420009022"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{5, 24}, {45, 45}}</string>
-						<reference key="NSSuperview" ref="420009022"/>
+					<object class="IBUIView" id="242182240">
+						<reference key="NSNextResponder" ref="247547560"/>
+						<int key="NSvFlags">-2147483329</int>
+						<string key="NSFrame">{{10, 48}, {95, 90}}</string>
+						<reference key="NSSuperview" ref="247547560"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="693792213">
+						<object class="NSColor" key="IBUIBackgroundColor" id="1039280334">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
-					<object class="IBUILabel" id="755362746">
-						<reference key="NSNextResponder" ref="420009022"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{54, 21}</string>
-						<reference key="NSSuperview" ref="420009022"/>
-						<reference key="NSNextKeyView" ref="657775062"/>
+					<object class="IBUILabel" id="143634804">
+						<reference key="NSNextResponder" ref="247547560"/>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrameSize">{114, 42}</string>
+						<reference key="NSSuperview" ref="247547560"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="242182240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<string key="IBUIText">玉树临风</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
@@ -86,26 +90,27 @@
 							<string key="name">Avenir-Medium</string>
 							<string key="family">Avenir</string>
 							<int key="traits">0</int>
-							<double key="pointSize">10</double>
+							<double key="pointSize">20</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Avenir-Medium</string>
-							<double key="NSSize">10</double>
+							<double key="NSSize">20</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
-				<string key="NSFrameSize">{54, 74}</string>
+				<string key="NSFrameSize">{114, 148}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="317097103"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="834202396"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="693792213"/>
+				<reference key="IBUIBackgroundColor" ref="1039280334"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
 				</object>
-				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -113,26 +118,26 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">backgroundImageView</string>
-						<reference key="source" ref="420009022"/>
-						<reference key="destination" ref="317097103"/>
+						<reference key="source" ref="247547560"/>
+						<reference key="destination" ref="834202396"/>
 					</object>
-					<int key="connectionID">34</int>
+					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">nickNameLabel</string>
-						<reference key="source" ref="420009022"/>
-						<reference key="destination" ref="755362746"/>
+						<reference key="source" ref="247547560"/>
+						<reference key="destination" ref="143634804"/>
 					</object>
-					<int key="connectionID">35</int>
+					<int key="connectionID">8</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">roundAvatarPlaceView</string>
-						<reference key="source" ref="420009022"/>
-						<reference key="destination" ref="657775062"/>
+						<reference key="source" ref="247547560"/>
+						<reference key="destination" ref="242182240"/>
 					</object>
-					<int key="connectionID">160</int>
+					<int key="connectionID">9</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -156,30 +161,29 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="420009022"/>
+						<reference key="object" ref="247547560"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="317097103"/>
-							<reference ref="755362746"/>
-							<reference ref="657775062"/>
+							<reference ref="242182240"/>
+							<reference ref="143634804"/>
+							<reference ref="834202396"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">19</int>
-						<reference key="object" ref="755362746"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="420009022"/>
+						<int key="objectID">4</int>
+						<reference key="object" ref="242182240"/>
+						<reference key="parent" ref="247547560"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="657775062"/>
+						<int key="objectID">5</int>
+						<reference key="object" ref="143634804"/>
 						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="420009022"/>
+						<reference key="parent" ref="247547560"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">14</int>
-						<reference key="object" ref="317097103"/>
-						<reference key="parent" ref="420009022"/>
+						<int key="objectID">6</int>
+						<reference key="object" ref="834202396"/>
+						<reference key="parent" ref="247547560"/>
 					</object>
 				</array>
 			</object>
@@ -187,21 +191,51 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ZJHAvatarView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">161</int>
+			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ZJHAvatarView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="nickNameLabel">UILabel</string>
+						<string key="roundAvatarPlaceView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickNameLabel">
+							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="roundAvatarPlaceView">
+							<string key="name">roundAvatarPlaceView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ZJHAvatarView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
-		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
