--- a/Draw/ZhaJinHua/View/ZJHMyAvatarView.xib
+++ b/Draw/ZhaJinHua/View/ZJHMyAvatarView.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.SystemVersion">12A269</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -39,7 +39,7 @@
 					<object class="IBUIImageView" id="304712742">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{104, 52}</string>
+						<string key="NSFrameSize">{111, 57}</string>
 						<reference key="NSSuperview" ref="669070084"/>
 						<reference key="NSNextKeyView" ref="1603170"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -53,7 +53,7 @@
 					<object class="IBUIView" id="1603170">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{4, 6}, {45, 45}}</string>
+						<string key="NSFrame">{{4, 7}, {45, 45}}</string>
 						<reference key="NSSuperview" ref="669070084"/>
 						<reference key="NSNextKeyView" ref="752950023"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -66,7 +66,7 @@
 					<object class="IBUILabel" id="752950023">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{52, 0}, {50, 16}}</string>
+						<string key="NSFrame">{{57, 0}, {50, 16}}</string>
 						<reference key="NSSuperview" ref="669070084"/>
 						<reference key="NSNextKeyView" ref="165767141"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -90,7 +90,7 @@
 							<double key="pointSize">10</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
+							<string key="NSName">Avenir-Medium</string>
 							<double key="NSSize">10</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -99,7 +99,7 @@
 					<object class="IBUILabel" id="165767141">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{52, 19}, {50, 11}}</string>
+						<string key="NSFrame">{{57, 19}, {50, 11}}</string>
 						<reference key="NSSuperview" ref="669070084"/>
 						<reference key="NSNextKeyView" ref="560392704"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -122,8 +122,8 @@
 							<int key="traits">0</int>
 							<double key="pointSize">8</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="104399581">
-							<string key="NSName">Helvetica</string>
+						<object class="NSFont" key="IBUIFont" id="198464402">
+							<string key="NSName">Avenir-Medium</string>
 							<double key="NSSize">8</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -132,7 +132,7 @@
 					<object class="IBUIImageView" id="560392704">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{49, 35}, {12, 12}}</string>
+						<string key="NSFrame">{{55, 37}, {12, 12}}</string>
 						<reference key="NSSuperview" ref="669070084"/>
 						<reference key="NSNextKeyView" ref="505310797"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -146,8 +146,9 @@
 					<object class="IBUILabel" id="505310797">
 						<reference key="NSNextResponder" ref="669070084"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{61, 32}, {40, 18}}</string>
+						<string key="NSFrame">{{68, 34}, {40, 18}}</string>
 						<reference key="NSSuperview" ref="669070084"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="155636806"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -163,11 +164,11 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<reference key="IBUIFontDescription" ref="258912737"/>
-						<reference key="IBUIFont" ref="104399581"/>
+						<reference key="IBUIFont" ref="198464402"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
-				<string key="NSFrameSize">{104, 52}</string>
+				<string key="NSFrameSize">{111, 57}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="304712742"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -247,10 +248,10 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="304712742"/>
 							<reference ref="1603170"/>
-							<reference ref="752950023"/>
 							<reference ref="505310797"/>
-							<reference ref="560392704"/>
 							<reference ref="165767141"/>
+							<reference ref="752950023"/>
+							<reference ref="560392704"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -318,7 +319,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="coin@2x.png">{64, 68}</string>
-			<string key="zjh_my_avatar_bg@2x.png">{208, 101}</string>
+			<string key="zjh_my_avatar_bg@2x.png">{222, 114}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
