--- a/Draw/ZhaJinHua/Controller/ZJHRoomListCell.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHRoomListCell.xib
@@ -134,7 +134,7 @@
 							<object class="IBUIView" id="108793412">
 								<reference key="NSNextResponder" ref="956424433"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{119, 46}, {42, 44}}</string>
+								<string key="NSFrame">{{134, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
 								<reference key="NSNextKeyView" ref="562000748"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -149,7 +149,7 @@
 							<object class="IBUIView" id="562000748">
 								<reference key="NSNextResponder" ref="956424433"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{167, 46}, {42, 44}}</string>
+								<string key="NSFrame">{{195, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
 								<reference key="NSNextKeyView" ref="715107468"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -164,9 +164,9 @@
 							<object class="IBUIView" id="715107468">
 								<reference key="NSNextResponder" ref="956424433"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{217, 46}, {42, 44}}</string>
+								<string key="NSFrame">{{258, 46}, {42, 44}}</string>
 								<reference key="NSSuperview" ref="956424433"/>
-								<reference key="NSNextKeyView" ref="97789219"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -174,20 +174,6 @@
 									<reference key="NSCustomColorSpace" ref="409308154"/>
 								</object>
 								<int key="IBUITag">105</int>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-							<object class="IBUIView" id="97789219">
-								<reference key="NSNextResponder" ref="956424433"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{265, 46}, {42, 44}}</string>
-								<reference key="NSSuperview" ref="956424433"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-									<reference key="NSCustomColorSpace" ref="409308154"/>
-								</object>
-								<int key="IBUITag">106</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
@@ -223,7 +209,7 @@
 						<reference key="source" ref="81896483"/>
 						<reference key="destination" ref="780803708"/>
 					</object>
-					<int key="connectionID">13</int>
+					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -231,7 +217,7 @@
 						<reference key="source" ref="81896483"/>
 						<reference key="destination" ref="978668417"/>
 					</object>
-					<int key="connectionID">14</int>
+					<int key="connectionID">19</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -259,13 +245,12 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="979450192"/>
 							<reference ref="978668417"/>
-							<reference ref="97789219"/>
-							<reference ref="715107468"/>
-							<reference ref="562000748"/>
 							<reference ref="83313951"/>
-							<reference ref="108793412"/>
 							<reference ref="298098795"/>
 							<reference ref="780803708"/>
+							<reference ref="715107468"/>
+							<reference ref="562000748"/>
+							<reference ref="108793412"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -277,11 +262,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="978668417"/>
-						<reference key="parent" ref="81896483"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="97789219"/>
 						<reference key="parent" ref="81896483"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -329,8 +309,6 @@
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="6.CustomClassName">DiceAvatarView</string>
-				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.CustomClassName">DiceAvatarView</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.CustomClassName">DiceAvatarView</string>
@@ -342,7 +320,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
@@ -351,7 +329,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">dice_line@2x.png</string>
-			<string key="NS.object.0">{16, 16}</string>
+			<string key="NS.object.0">{2, 2}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
